--- a/staging.env
+++ b/staging.env
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_TYPE=staging
-NEXT_PUBLIC_API_URL=https://api-dev.cachooapp.com/api/v1/
+NEXT_PUBLIC_API_URL=http://localhost:3000/api/v1/
 NEXT_PUBLIC_API_SOCKET_URL=https://api-dev.cachooapp.com
 NEXT_PUBLIC_MAP_API_KEY=AIzaSyB5z_uOQsuRX09jKiH-I1ud1wKLxc2QmwY
 NEXT_PUBLIC_IMAGE_BASE_URL=https://cachoo-bucket.s3.ap-south-1.amazonaws.com/
